--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs = ["-Xinline-classes"]
     }
 
     buildFeatures {
@@ -73,6 +74,8 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
+    implementation "dev.chrisbanes.accompanist:accompanist-insets:0.6.1"
 
     testImplementation 'junit:junit:4.13.2'
 
